Fix alignment error in css

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ header {
 .heading {
   display: flex;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
   width: 100%;
 }
 
